# biblioteki

./: CMakeLists.txt  README.md  main.cpp  static
Singleton/: Singleton.cpp  Singleton.h
calls1/: Calls1.cpp  Calls1.h
singleton_dynamic/: singleton_dynamic.cpp  singleton_dynamic.h
